--- a/client/src/public/stylesheets/base/_checklist.scss
+++ b/client/src/public/stylesheets/base/_checklist.scss
@@ -41,9 +41,19 @@
 }
 
 .tab-group {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	        align-items: center;
+	        
 	font-family: $font-family-serif;
 	text-align: center;
-	align-items: center;
 }
 
 .icn-tab {
