--- a/client/src/public/stylesheets/base/_topics.scss
+++ b/client/src/public/stylesheets/base/_topics.scss
@@ -45,6 +45,7 @@ h1.title-line-background {
 }
 
 .Stage-menu {
+  z-index: 1000;
   // a:hover {
   //   color: $blue-accent-primary;
   // }
